1.2.3	2008-09-08
	* Add metro_code as a alias for dma_code ( Boris Zentner )
1.2.2	2008-08-13
	* Update test_city.py and test_region.py ( Boris Zentner )
	* Add region_name to GeoIPRegion ( Boris Zentner )
	* Add database_info and database_edition attributes to GeoIP object
		(James Henstridge)
	* Add region_name and time_zone keys to GeoIPRecord wrapper (James
		Henstridge).
	* Export the country list, country code -> country name mapping, and
		country->continent mapping ( Ignacio Vazquez-Abrams )
	* Raise country code counter from 251 to 253 ( Boris Zentner )
	!! record_by_addr and record_by_name return None instead of throwing a
exception. See test_city.py ( Boris Zentner ) 
	* Add a py_geoip.error Exception object. (Boris Zentner)
	* Export the country list, country code -> country name mapping, and country->continent
		mapping ( Ignacio Vazquez-Abrams )
	* Changed license to LGPL from GPL

1.2.1	2005-06-28
	* Added support for GeoIP Region

1.2.0	2003-05-08
	* Added support for GeoIP City

1.1.0	2003-03-18
	* Added support for GeoIP ISP and Organization

0.2.0	2002-06-25
	* Initial Release