@@ -1,6 +1,6 @@
 Requirements:
 	Python 2.0 or greater
-	GeoIP C Library 1.2.0 or greater
+	GeoIP C Library 1.4.4 or greater
 
 To Install:
 	python setup.py build
@@ -20,7 +20,7 @@ directory" error, add /usr/local/lib to /etc/ld.so.conf then run
 
 License:
 
-Copyright (c) 2007 MaxMind LLC
+Copyright (c) 2008 MaxMind LLC
 
 All rights reserved.  This package is free software; it is licensed
 under the LGPL.
